--- a/index.haml
+++ b/index.haml
@@ -5,13 +5,13 @@
         #tabs.tabs.__catalog
           %ul
             %li
-              %a{href: "#news"} Новинки
+              %a{href: "#news", class: "a __pseudo"} Новинки
             %li
-              %a{href: "#stock"} Акции
+              %a{href: "#stock", class: "a __pseudo"} Акции
             %li
-              %a{href: "#hit"} Лидеры продаж
+              %a{href: "#hit", class: "a __pseudo"} Лидеры продаж
             %li
-              %a{href: "#order"} Под заказ
+              %a{href: "#order", class: "a __pseudo"} Под заказ
           #news
             .layer
               .iosslider.__catalog
