--- a/views/layouts/_bar.haml
+++ b/views/layouts/_bar.haml
@@ -6,7 +6,7 @@
         .bar_i_cell
           .bar_i_inner.__location
             Регион:&nbsp;
-            %a{href: "#", class: "bar_i_inner_a"}
+            %a{href: "#", class: "bar_i_inner_a a __pseudo __inner"}
               %span Беларусь
           %nav.dropdown.__menu
             %ul.dropdown_menu
@@ -23,7 +23,7 @@
         .bar_i_cell
           .bar_i_inner.__currency
             Валюта:&nbsp;
-            %a{href: "#", class: "bar_i_inner_a"}
+            %a{href: "#", class: "bar_i_inner_a a __pseudo __inner"}
               %span BYR
           %nav.dropdown.__menu
             %ul.dropdown_menu
