--- a/views/layouts/_site_map.haml
+++ b/views/layouts/_site_map.haml
@@ -1,7 +1,7 @@
 %section#site-map.site-map
   .ctn
     .site-map_toggle
-      %a{href: "#", class: "site-map_toggle_a"}
+      %a{href: "#", class: "site-map_toggle_a a __pseudo __inner"}
         %span Карта сайта
     .site-map_navs
       %nav.site-map_nav.__catalog.cf
