--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -97,6 +97,8 @@
         border-bottom: 1px solid #e1e1e1;
         border-left:   1px solid #e1e1e1;
         box-shadow: 0 0 15px 5px rgba(0, 0, 0, .1);
+        cursor: default;
+        display: none;
         padding: 50px 10px 0;
         position: absolute;
         top: 0;
