Menu fix & promo slider

--- a/catalog.haml
+++ b/catalog.haml
@@ -1,4 +1,4 @@
-%section.section.m-t_3.m-b_3{role: "region", "aria-label" => ""}
+%section.section.m-t_3{role: "region", "aria-label" => ""}
   .ctn
     .p-t_2
       = haml "/views/common/_breadcrumbs".to_sym
