--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -103,7 +103,7 @@
         position: absolute;
         top: 0;
         right: -1px;
-        left: 0;
+        left: -1px;
         z-index: 998;
         @include prefixes(transition, all .33s);
       }
@@ -130,7 +130,6 @@
                   color: #fff;
                 }
               }
-
 
 
 //****************************************************************************************************
@@ -220,10 +219,11 @@
       background-color: #fff;
       box-shadow: 0 0 15px 5px rgba(0, 0, 0, .1);
       display: none;
+      min-height: 360px;
       position: absolute;
       top: 100%;
       left: 0;
-      padding: 10px 0;
+      padding: 10px 0 50px;
       width: 280px;
       z-index: 9998;
     }
@@ -266,7 +266,7 @@
         display: none;
         position: absolute;
         top: 50%;
-        right: -7px;
+        right: -6px;
         height: 0;
         width: 0;
         z-index: 9999;
@@ -289,7 +289,6 @@
       left: 100%;
       padding: 10px 0;
       width: 280px;
-      z-index: 9998;
     }
     > ul > li > ul > li {
       &:first-child {
@@ -330,10 +329,9 @@
         display: none;
         position: absolute;
         top: 50%;
-        right: -7px;
+        right: -6px;
         height: 0;
         width: 0;
-        z-index: 9999;
         @include prefixes(transform, translate(0, -50%));
       }
       &:hover {
@@ -341,12 +339,16 @@
       }
     }
     > ul > li > ul > li > div {
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
       display: none;
       position: absolute;
       top: 0;
       bottom: 0;
-      left: 100%;
-      width: 380px;
+      left: 0;
+      width: 660px;
+      z-index: -1;
     }
   }
 
@@ -388,7 +390,6 @@
 
 
 
-
 //****************************************************************************************************
 //
 // .. SECTION
@@ -406,6 +407,153 @@
     }
   }
 }
+
+
+
+//****************************************************************************************************
+//
+// .. HOME NAVIGATION
+//
+//****************************************************************************************************
+.home-nav {
+  position: relative;
+}
+
+  //
+  // .. Dropdown menu
+  //
+  .home-nav {
+    > ul {
+      display: inline-block;
+      min-height: 360px;
+      padding: 10px 0;
+      position: relative;
+      vertical-align: top;
+      width: 280px;
+      z-index: 9997;
+      &:hover {
+        box-shadow: inset 0 0 0 1px #e1e1e1;
+      }
+    }
+    > ul > li {
+      &:first-child {
+        > a {
+          &::before {display: none;}
+        }
+      }
+      &:hover {
+        > a  {
+          color: $link-color-hover;
+          &::after {display: block;}
+        }
+        > ul {display: block;}
+      }
+    }
+    > ul > li > a {
+      display: block;
+      font-size: 13px;
+      font-weight: 700;
+      line-height: 15px;
+      padding: 12px 60px 12px 30px;
+      position: relative;
+      text-transform: uppercase;
+      &::before {
+        background-color: $muted-color;
+        content: '';
+        height: 1px;
+        position: absolute;
+        top: 0;
+        right: 30px;
+        left: 30px;
+      }
+      &::after {
+        border-top:    7px solid transparent;
+        border-left:   7px solid #fff;
+        border-bottom: 7px solid transparent;
+        content: '';
+        display: none;
+        position: absolute;
+        top: 50%;
+        right: -6px;
+        height: 0;
+        width: 0;
+        z-index: 9999;
+        @include prefixes(transform, translate(0, -50%));
+      }
+      .fa {
+        font-size: 10px;
+        position: absolute;
+        top: 50%;
+        right: 30px;
+        @include prefixes(transform, translate(0, -50%));
+      }
+    }
+    > ul > li > ul {
+      background-color: rgba(39, 39, 39, .95);
+      display: none;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 100%;
+      padding: 10px 0;
+      width: 280px;
+    }
+    > ul > li > ul > li {
+      &:hover {
+        > a   {
+          color: $link-color-hover;
+          &::after {display: block;}
+        }
+        > div {display: block;}
+      }
+    }
+    > ul > li > ul > li > a {
+      color: #fff;
+      display: block;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 15px;
+      padding: 12px 30px;
+      position: relative;
+      &::before {
+        background-color: #3d3d3d;
+        content: '';
+        height: 1px;
+        position: absolute;
+        top: 0;
+        right: 30px;
+        left: 30px;
+      }
+      &::after {
+        border-top:    7px solid transparent;
+        border-left:   7px solid #3d3d3d;
+        border-bottom: 7px solid transparent;
+        content: '';
+        display: none;
+        position: absolute;
+        top: 50%;
+        right: -6px;
+        height: 0;
+        width: 0;
+        @include prefixes(transform, translate(0, -50%));
+      }
+      &:hover {
+        color: $link-color-hover;
+      }
+    }
+    > ul > li > ul > li > div {
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: none;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      width: 660px;
+      z-index: -1;
+    }
+  }
 
 
 
@@ -693,8 +841,8 @@
   }
 }
 
-// .. Banners
-.imageslider.__banners {
+// .. Promo
+.imageslider.__promo {
   .slider-nav {
     position: absolute;
     right: 10px;
