--- a/views/common/_catalogs.haml
+++ b/views/common/_catalogs.haml
@@ -6,22 +6,22 @@
     %ul
       %li
         %a{href: "/catalog"} Уход за лицом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за телом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за волосами
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Декоративная косметика
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Подарочные наборы
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Парфюмерия
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
   %li
     %a{href: "/catalog"}
       Популярная косметика
@@ -29,22 +29,22 @@
     %ul
       %li
         %a{href: "/catalog"} Уход за лицом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за телом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за волосами
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Декоративная косметика
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Подарочные наборы
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Принадлежности
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
   %li
     %a{href: "/catalog"}
       Салонная косметика
@@ -52,31 +52,31 @@
     %ul
       %li
         %a{href: "/catalog"} Уход за лицом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за телом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за волосами
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Для парикмахеров
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Маникюр / Педикюр
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Визаж / Боди арт
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Депиляция / Массаж
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Наращиваине и окраска ресниц
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Наращиваине ногтей
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
   %li
     %a{href: "/catalog"}
       Luxury / Роскошное качество
@@ -84,22 +84,22 @@
     %ul
       %li
         %a{href: "/catalog"} Уход за лицом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за телом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за волосами
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Аксессуары
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Подарочные наборы
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Декоративная косметика
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
   %li
     %a{href: "/catalog"}
       Натуральная косметика и органика
@@ -107,19 +107,19 @@
     %ul
       %li
         %a{href: "/catalog"} Уход за лицом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за телом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за волосами
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Декоративная косметика
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Подарочные наборы
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
   %li
     %a{href: "/catalog"}
       Для детей
@@ -127,22 +127,22 @@
     %ul
       %li
         %a{href: "/catalog"} Для младенцев
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Для ванны, гигиена
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за детской кожей
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Парфюм
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Детская декоративная косметика
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Для будующих и кормящих мам
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
   %li
     %a{href: "/catalog"}
       Для мужчин
@@ -150,19 +150,19 @@
     %ul
       %li
         %a{href: "/catalog"} Уход за лицом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за телом
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Уход за волосами
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Подарочные наборы
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Принадлежности
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
   %li
     %a{href: "/catalog"}
       Гигиена
@@ -170,12 +170,12 @@
     %ul
       %li
         %a{href: "/catalog"} Для всей семьи
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Для детей
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
       %li
         %a{href: "/catalog"} Для женщин
-        %div{style: "background: url(/assets/images/fake/promo_1.jpg) center no-repeat;"}
+        %div{style: "background-image: url(/assets/images/fake/promo_1.jpg);"}
   %li
     %a{href: "/catalog", class: "o-h"} Парфюмерия
