--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -958,6 +958,17 @@
 
 //****************************************************************************************************
 //
+// .. DIALOG
+//
+//****************************************************************************************************
+.dialog {
+
+}
+
+
+
+//****************************************************************************************************
+//
 // .. ELEMENTS
 //
 //****************************************************************************************************
@@ -1069,6 +1080,14 @@
     position: relative;
     top: 2px;
   }
+}
+
+//
+// .. Hr
+//
+.hr {
+  height: 3px;
+  &.__muted {background-color: $muted-color;}
 }
 
 
