--- a/assets/stylesheets/layers/project/sprites.scss
+++ b/assets/stylesheets/layers/project/sprites.scss
@@ -21,4 +21,13 @@
     &.__svyaznoy {@include size(97, 31); background-position: -222px 0;}
     &.__bgs      {@include size(69, 31); background-position: -319px 0;}
   }
+  &.__socialbtn {
+    background-image: url(/assets/images/sprites/sprite-social-btn.png);
+    vertical-align: top;
+    @include size(210, 40);
+    &.__fb   {background-position: 0 0;}
+    &.__vk   {background-position: 0 -40px;}
+    &.__ok   {background-position: 0 -80px;}
+    &.__mail {background-position: 0 -120px;}
+  }
 }
