--- a/views/layouts/_bar.haml
+++ b/views/layouts/_bar.haml
@@ -53,7 +53,7 @@
             %i.ico.__20.__user.va-m
             %span.va-m Моя пудра
           .bar_i_inner
-            %a{href: "#"} Выйти
+            %a{href: "#", data: {dialog: "true", url: "/dialogs/_login"}} Войти
           .dropdown
             .dropdown_inner
               .authorized
