--- a/dialogs/_login.haml
+++ b/dialogs/_login.haml
@@ -28,8 +28,7 @@
             %b Первый раз на сайте?
           %p
             %a{href: "#", class: "tx __12", data: {dialog: "true", url: "/dialogs/_register"}} Регистрация
-    .grid-i.__grid-1
-    .grid-i.__grid-3
+    .grid-i.__grid-3.__prefix-1
       .p-l_1
         %label.form_label.tx.__upper.form_el.__bold.m-b_1
           %b Войти, используя соцсети:
