--- a/dialogs/_register.haml
+++ b/dialogs/_register.haml
@@ -18,9 +18,8 @@
             %b Телефон:
           %input{type: "text", class: "form_text form_el __block"}
         %div.m-b_1
-          %input{type: "submit", class: "form_button", value: "Войти на сайт"}
-    .grid-i.__grid-1
-    .grid-i.__grid-3
+          %input{type: "submit", class: "form_button", value: "Регистрация"}
+    .grid-i.__grid-3.__prefix-1
       .p-l_1
         %label.form_label.tx.__upper.form_el.__bold.m-b_2{style: "line-height: 14px;"}
           %b Зарегистрироваться, используя соцсети:
