--- a/demo/index.haml
+++ b/demo/index.haml
@@ -33,8 +33,8 @@
           %li
             %a{href: "/catalog_show"} Страница товара
           %li
-            %a{href: "/catalog_show"} Корзина
+            %a{href: "/basket"} Корзина
           %li
-            %a{href: "/catalog_show"} Оформление заказа
+            %a{href: "/checkout"} Оформление заказа
           %li
-            %a{href: "/catalog_show"} Оплата
+            %a{href: "/payment"} Оплата
