--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -15,26 +15,52 @@
   border-bottom: 3px solid $muted-color;
 }
   .bar_i {
-    cursor: pointer;
+    display: table-cell;
+    font-size: 11px;
+    height: 50px;
+    line-height: 14px;
+    padding: 0 20px;
     position: relative;
-    &:first-child {border-left:  1px solid transparent;}
-    &:last-child  {border-right: 1px solid transparent;}
-    &:not(:last-child) {border-right: 1px solid #eee;}
-    &:hover {
-      &:first-child {border-color: #eee;}
-      &:last-child  {border-color: #eee;}
-      @include linear-gradient(vertical, #f8f8f8, #fefefe);
-    }
+    vertical-align: middle;
+    @include prefixes(box-sizing, border-box);
+    &:not(:last-child) {border-right: 1px solid $muted-color;}
     &.__location, &.__currency {
-      &:hover {
-        .dropdown {display: block;}
-        .bar_i_inner_a {&::after {content: '\f077';}}
+      .bar_i_inner > a {
+        &:hover {
+          color: $base-color;
+          span {border-color: $base-color !important;}
+        }
+        &::after {
+          color: $major-color;
+          content: '\f078';
+          font-size: 8px;
+          font-family: FontAwesome;
+          margin-left: 5px;
+        }
       }
     }
-    &.__contacts {
-
+    &.__location {
+      width: 130px;
     }
-    &.__user {
+    &.__currency {
+      width: 125px;
+    }
+    &.__contacts {
+      font-size: 16px;
+      font-weight: 700;
+      text-align: center;
+      text-transform: uppercase;
+      width: 465px;
+      a {
+        text-decoration: underline;
+        &:hover {
+          color: $base-color;
+          text-decoration: none;
+        }
+      }
+    }
+    &.__authorize {
+      width: 215px;
       a {
         color: $major-color;
         text-decoration: underline;
@@ -52,41 +78,19 @@
         }
       }
     }
-  }
-    .bar_i_cell {
-      display: table-cell;
-      font-size: 11px;
-      height: 50px;
-      line-height: 14px;
-      vertical-align: middle;
-    }
-      .bar_i_inner {
-        display: inline-block;
-        padding: 0 20px;
-        position: relative;
-        vertical-align: middle;
-        z-index: 999;
-        &.__location, &.__currency {
-          .bar_i_inner_a {
-            &:hover {
-              color: $base-color;
-              span {border-color: $base-color;}
-            }
-            &::after {
-              color: $major-color;
-              content: '\f078';
-              font-size: 8px;
-              font-family: FontAwesome;
-              margin-left: 5px;
-            }
-          }
-        }
-        &.__contacts {
-          font-size: 16px;
-          font-weight: 700;
-          text-transform: uppercase;
+    &:hover {
+      .dropdown {display: block;}
+      &.__location, &.__currency {
+        &:hover {
+          .bar_i_inner > a {&::after {content: '\f077';}}
         }
       }
+    }
+  }
+    .bar_i_inner {
+      position: relative;
+      z-index: 999;
+    }
 
       //
       // .. Dropdown
@@ -1086,8 +1090,10 @@
 // .. Hr
 //
 .hr {
-  height: 3px;
-  &.__muted {background-color: $muted-color;}
+  background-color: $muted-color;
+  &.__muted {
+
+  }
 }
 
 
